# MATMPC

./: .gitignore  Draw.m  Draw_Comparison.asv  Draw_Comparison.m  InitData.m  InitData_ngrid.m  InitMemory.m  Initialization_Simulink.m  Model_Generation.m  README.md  Simulation.asv  Simulation.m  acc_analysis.m  draw_comparison_fcn.m  sim_res.mat
MATMPC-C/: CMakeLists.txt  README.md
MATMPC-C/csv/: sim_results.csv
MATMPC-C/include/: casadi_wrapper.h  erk.h  main_utils.h  mpc_common.h  mpc_fcn.h  mpc_set.h  sim.h  typedef_utils.h
MATMPC-C/src/: casadi_src.c  casadi_wrapper.c  erk.c  hpipm_sparse.c  line_search.c  main.c  main_utils.c  mpc_common.c  mpc_fcn.c  qp_generation.c  sim.c  simulate_system.c  solution_info.c  utils.c
MATMPC-MATLAB/: InitData.m  draw_from_csv.m
acc_analysis/: acc_analysis.m
data/: settings.mat  sim_cont_black_box.mat  sim_cont_black_box_fromVel.mat  sim_cont_grey_box.mat  sim_cont_grey_box_fromVel.mat  sim_white_box_corr.mat  sim_white_box_nom.mat  sim_white_box_nom_gp0.mat  swingup_diff.eps  swingup_pos.eps
doc/: HPIPM-Tutorial-Win10.txt  HPIPM-Tutorial.txt  documentation.tex  ref.bib
examples/: InvertedPendulum.m  InvertedPendulum_GP.m  InvertedPendulum_cont_GP.m  InvertedPendulum_disc_GP.m
gp_regression/: GPR.m  RBF_cov_line_casadi.m  python_setting.m  save_gp_data.m
mex_core/: Compile_Mex.m  Condensing.mexw64  Line_search.c  Line_search.mexw64  Recover.mexw64  Simulate_System.c  Simulate_System.mexw64  casadi_src.c  casadi_src.h  casadi_wrapper.c  compile_hpipm.m  erk_gp.c  erk_gp.h  full2sparse.mexw64  hpipm_pcond.mexw64  (+9 more)
(+115 files in other folders)
